[package]
authors = ["Claus Matzinger <claus.matzinger+kb@gmail.com>"]
edition = "2018"
name = "manning-lp-async-rust-project-2-m2-solution"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.3"
async-trait = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
yahoo_finance_api = "1.1"
tokio = { version="1.26.0", features = ["full"]}
tokio-stream = "0.1.1"
futures-util = "0.3"
chrono = {version = "0.4.22", features = ["serde"]}
clap = {version = "4.1.11", features = ["derive"]}
xactor = { version = "0.7", features = ["runtime-tokio"], default-features = false }
async-stream = "0.3.4"
time = { version = "0.3.20", features = ["serde"] }
anyhow = "1.0"